@@ -66,6 +66,7 @@ Added admin commands: /teama name <team> <name>, /teama description <team> <desc
 /team color is used whenever the players team name is displayed, this can be changed in the config under the option colorTeamName'
 Added a second hologram option to display a balance leaderboard
 Added a config option for a teleport delay on /team home
+There is now a config option to only allow a team to have a single owner, this comes with the addition of a new command (/team setowner) which will only be available if only a single owner is allowed
 
 Improvements:
 Commands and cooldowns only activate if the command is successful
